--- a/WebApi/.gitignore
+++ b/WebApi/.gitignore
@@ -31,6 +31,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+Migrations/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -267,6 +268,7 @@ ServiceFabricBackup/
 *.mdf
 *.ldf
 *.ndf
+*13.db
 
 # Business Intelligence projects
 *.rdl.data
